// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewFeaturesContainerTest renders all available preview features 1`] = `
<DocumentFragment>
  <div
    data-automation-id="preview-features-container"
  >
    <div
      class="preview-features-description"
    >
      The following preview features are available for your evaluation. Help us make them better!
    </div>
    <mock-previewfeaturestogglelist
      deps="[object Object]"
      displayedfeatureflags="[object Object],[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`PreviewFeaturesContainerTest renders special message when there is no preview features available 1`] = `
<DocumentFragment>
  <div
    data-automation-id="preview-features-container"
  >
    <mock-nodisplayablefeatureflagmessage />
  </div>
</DocumentFragment>
`;
